--- a/stable/horovod/templates/config.yaml
+++ b/stable/horovod/templates/config.yaml
@@ -122,7 +122,7 @@ data:
 
      if [ -n "$SSHPORT" ]; then
         echo "Port $SSHPORT" > /root/.ssh/config
-        sed -i "s/^Port.*/Port $SSHPORT /g" /etc/ssh/sshd_config
+        sed -i "s/^#Port.*/Port $SSHPORT /g" /etc/ssh/sshd_config
      fi
      echo "StrictHostKeyChecking no" >> /root/.ssh/config
 
